testsuite/gnatprove/tests/ug__account2/test.out
 error: volatile object in interfering context is not allowed in SPARK (SPARK RM 7.1.3(9)) [E0004]
--> account2.adb:15:26
   15 |             Num_Accounts := Num_Accounts + 1;
      |                             ^~~~~~~~~~~~
      + violation of aspect SPARK_Mode at line 2
    2 |      SPARK_Mode
      |      ^
      + launch "gnatprove --explain=E0004" for more information
gnatprove: error during flow analysis and proof
